--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,8 @@ yarn-error.log*
 # local env files
 .env*.local
 .env
-index.env
-non-index.env
+#index.env
+#non-index.env
 # vercel
 .vercel
 
@@ -38,3 +38,4 @@ next-env.d.ts
 
 *.env
 src/connect/*.env
+sql
